--- a/package.json
+++ b/package.json
@@ -3043,7 +3043,7 @@
 			},
 			{
 				"command": "gitlens.copyRemoteBranchesUrl",
-				"title": "Copy Remote Branches Url",
+				"title": "Copy Remote Branches URL",
 				"category": "GitLens",
 				"icon": {
 					"dark": "images/dark/icon-copy-link.svg",
@@ -3058,7 +3058,7 @@
 			},
 			{
 				"command": "gitlens.copyRemoteBranchUrl",
-				"title": "Copy Remote Branch Url",
+				"title": "Copy Remote Branch URL",
 				"category": "GitLens",
 				"icon": {
 					"dark": "images/dark/icon-copy-link.svg",
@@ -3073,7 +3073,7 @@
 			},
 			{
 				"command": "gitlens.copyRemoteCommitUrl",
-				"title": "Copy Remote Commit Url",
+				"title": "Copy Remote Commit URL",
 				"category": "GitLens",
 				"icon": {
 					"dark": "images/dark/icon-copy-link.svg",
@@ -3088,7 +3088,7 @@
 			},
 			{
 				"command": "gitlens.copyRemoteComparisonUrl",
-				"title": "Copy Remote Comparison Url",
+				"title": "Copy Remote Comparison URL",
 				"category": "GitLens",
 				"icon": {
 					"dark": "images/dark/icon-copy-link.svg",
@@ -3108,7 +3108,7 @@
 			},
 			{
 				"command": "gitlens.copyRemoteFileUrlToClipboard",
-				"title": "Copy Remote File Url",
+				"title": "Copy Remote File URL",
 				"category": "GitLens",
 				"icon": {
 					"dark": "images/dark/icon-copy-link.svg",
@@ -3141,7 +3141,7 @@
 			},
 			{
 				"command": "gitlens.copyRemotePullRequestUrl",
-				"title": "Copy Pull Request Url",
+				"title": "Copy Pull Request URL",
 				"category": "GitLens",
 				"icon": {
 					"dark": "images/dark/icon-copy-link.svg",
@@ -3162,7 +3162,7 @@
 			},
 			{
 				"command": "gitlens.copyRemoteRepositoryUrl",
-				"title": "Copy Remote Repository Url",
+				"title": "Copy Remote Repository URL",
 				"category": "GitLens",
 				"icon": {
 					"dark": "images/dark/icon-copy-link.svg",
